add stochastic project

--- a/index.html
+++ b/index.html
@@ -104,6 +104,14 @@
 		<a href="https://github.com/excelexcavator/VA_Project" style="color:#EEEEEE">click here to know more</a><br><br>
 		Multimedia including music, images as well as videos are widely used in everyday life, by which huge amount of information is loaded. Although research in this field has been conducted over years, it is still difficult for people to find out what on earth the relationship between image and audio is and to recover either with the other. I, as well as my two partners, have worked on a curriculum project for two months to automatically match audio segments with silent videos with deep learning methods. During the project, we take advantage of the idea of ResNet structure and BCE loss function. Up till now, we have reached a high matched rate of 90 percent and finished a curriculum paper presenting our work.<br>
 	</p>
+	
+	<div style="width=100%;clear:both;background-color:#EEEEEE;height:20px">
+	</div>	
+	<p style="color:#FFFFFF;padding-top:10px;padding-left:20px">
+		<b style="color:#000000;font-family:Arial">Gaussian noise passing convolutional neural networks (1/2018-2/2018)<br></b>
+		<a href="./paper2.pdf" style="color:#EEEEEE">click here to know more</a><br><br>
+		Recently, studies on deep neural networks have developed by leaps and bounds, especially convolutional neural networks. When applying deep learning methods to many areas, researchers are often annoyed by the quality of input signal. Adversarial examples can largely affect the performance of CNN models. In this work, the most common and typical interface --- additive Gaussian noise is supposed to pass through CNNs and the performance of it is studied in detail, both theoretically and practically. I take simulations and experiments on CIFAR-10 data-set. The experiments show that ReLU and LeakyReLU layers have better training performance than tanh layer when input signal is inffluenced by Gaussian noise. Besides, max-pooling layer is more stable than average-pooling layer under Gaussian noise.<br>
+	</p>
 </div>
 
 </div>
