refresh index.html

--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
                 <li><a href="#content" style="font-family:Arial Black">Short BIO</a></li>
                 <li><a href="#publications" style="font-family:Arial Black">Publications</a></li>
                 <li><a href="#awards" style="font-family:Arial Black">Awards</a></li>
-                <li><a href="#projects" style="font-family:Arial Black">Projects</a></li>
+                <li><a href="#research" style="font-family:Arial Black">Research</a></li>
                 </ul>
     </div>
 </div>
@@ -78,9 +78,9 @@
 	</p>
 </div>
 
-<div id="projects" style="background-color:#9ACD32;height:100%;width:100%;float:left">
+<div id="research" style="background-color:#9ACD32;height:100%;width:100%;float:left">
 	<div style="width=100%;clear:both;background-color:#EEEEEE;height:50px;text-align:left;line-height:50px;font-family:Arial Black">
-		<p><b>Projects</b></p>
+		<p><b>Research</b></p>
 	</div>
 	
 	<p style="color:#FFFFFF;padding-top:10px;padding-left:20px">
