refresh index.html

--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
 	<div class="bs-docs-sidebar hidden-print hidden-xs hidden-sm" role="complementary">
                 <ul class="nav bs-docs-sidenav" data-spy="affix" data-offset-top="200">
                 <li class="active"><a href="#header1" style="font-family:Arial Black">Home</a>
-                <li><a href="#content" style="font-family:Arial Black">Short BIO</a></li>
+                <li><a href="#bio" style="font-family:Arial Black">Short BIO</a></li>
                 <li><a href="#publications" style="font-family:Arial Black">Publications</a></li>
                 <li><a href="#awards" style="font-family:Arial Black">Awards</a></li>
                 <li><a href="#research" style="font-family:Arial Black">Research</a></li>
@@ -48,6 +48,16 @@
 <p style="padding-left:20px;color:black">
   	<b>&nbsp;[<a href="CV.pdf">Curriculum Vitae</a>]</b>
 </p>
+
+<div id="bio" style="background-color:#9ACD32;height:100%;width:100%;float:left">
+	<div style="width=100%;clear:both;background-color:#EEEEEE;height:50px;text-align:left;line-height:50px;font-family:Arial Black">
+		<p><b>Short Bio</b></p>
+	</div>
+	<p style="color:#FFFFFF;padding-top:10px;padding-left:20px">
+		I am Shuhao Chang, a junior student in the EE department at Tsinghua University. I will graduate in June 2019. My research interests primarily include the <b>data analysis and privacy-preserving, digital signal prosessing, machine learning and deep learning</b>. My overall research objective is to combine machine learning and deep learning methods with practical data analysis or signal processing problems. In the past, I worked on research about stochastic processes, too.
+	</p>
+</div>
+
 <div id="publications" style="background-color:#9ACD32;height:100%;width:100%;float:left">
 	<div style="width=100%;clear:both;background-color:#EEEEEE;height:50px;text-align:left;line-height:50px;font-family:Arial Black">
 		<p><b>Publications</b></p>
@@ -55,7 +65,7 @@
 
 	<p style="color:#FFFFFF;padding-top:10px;padding-left:20px">
 		Shuhao Chang, Xi Chen, Menglu Wang. 
-		<a href="./paper1.pdf" style="color:#FFFFFF"><i> An Efficient Algorithm for Refining Position and Velocity<br> Outputs of Space-borne GNSS Receivers. </i></a>
+		<a href="./paper1.pdf" style="color:#FFFFFF"><i> An Efficient Algorithm for Refining Position and Velocity Outputs of Space-borne GNSS Receivers. </i></a>
 		<a href="http://chinacom.eai-conferences.org/" style="color:#FFFFFF">(CHINACOM, 2017)</a>
 	</p>
 </div>
