--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
 	
 <div id="content" style="background-color:#9ACD32;height:100%;width:67%;float:left">
 <p style="color:#FFFFFF;padding-top:10px;padding-left:20px">
-	<b style="font-size:26px">Junior Student</b><br><br>
+	<b style="font-size:26px">Senior Student</b><br><br>
 	<b><a href="http://www.tsinghua.edu.cn/publish/newthuen/" style="color:#FFFFFF">Tsinghua University</a><br>
 	<a href="http://www.tsinghua.edu.cn/publish/ee/" style="color:#FFFFFF">Dept of Electronic Engineering</a><br>
 	<a href="http://fi.ee.tsinghua.edu.cn" style="color:#FFFFFF">Future Communication &amp; Internet Lab </a></b><br><br>
@@ -54,7 +54,7 @@
 		<p><b>Short Bio</b></p>
 	</div>
 	<p style="color:#FFFFFF;padding-top:10px;padding-left:20px">
-		I am Shuhao Chang, a junior student in the EE department at Tsinghua University. I will graduate in June 2019. My research interests primarily include the <b>data analysis and privacy-preserving, digital signal prosessing, machine learning and deep learning</b>. My overall research objective is to combine machine learning and deep learning methods with practical data analysis or signal processing problems. In the past, I worked on research about stochastic processes, too.
+		I am Shuhao Chang, a senior student majored in Electronic Information Science and Technology at Tsinghua University. I will graduate in June 2019. My research interests primarily include <b>data analysis and privacy-preserving, machine learning and deep learning methods</b>. My overall research objective is to combine machine learning and deep learning methods with practical data analysis problems.
 	</p>
 </div>
 
@@ -72,40 +72,45 @@
 
 <div id="awards" style="background-color:#9ACD32;height:100%;width:100%;float:left">
 	<div style="width=100%;clear:both;background-color:#EEEEEE;height:50px;text-align:left;line-height:50px;font-family:Arial Black">
-		<p><b>Awards</b></p>
+		<p><b>Awards &amp; Honors </b></p>
 	</div>
 
 	<p style="color:#FFFFFF;padding-top:10px;padding-left:20px">
-		Nov.&nbsp;&nbsp;2017 Scholarship for academic excellence of Tsinghua University<br>
-		Nov.&nbsp;&nbsp;2017 Outstanding student backbone honor of Tsinghua University<br>
-		Oct.&nbsp;&nbsp;2016 Comprehensive excellent scholarship of Tsinghua University<br>
-		Oct.&nbsp;&nbsp;2016 Social contribution scholarship of Tsinghua University<br>
-		Oct.&nbsp;&nbsp;2016 Outstanding public welfare honor of Tsinghua University<br>
-		Sept.&nbsp;2015 Second-class scholarship for junior students of Tsinghua University<br>
-		Aug.&nbsp;&nbsp;2015 'Perfect' level in 'Leading Plan' of Tsinghua University<br>
-		May.&nbsp;&nbsp;2015 'Outstanding Student' honor of Jilin Province, China<br>
-		Sept.&nbsp;2014 First-class prize in 'National Mathematical Olympiad' of Jilin area<br>
+		2017&nbsp;&nbsp;&nbsp;&nbsp;Scholarship for academic excellence of Tsinghua University<br>
+		&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
+        Outstanding student backbone honor of Tsinghua University<br><br>
+		2016&nbsp;&nbsp;&nbsp;&nbsp;Comprehensive excellent scholarship of Tsinghua University<br>
+		&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
+        Social contribution scholarship of Tsinghua University<br>
+		&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
+        Outstanding public welfare honor of Tsinghua University<br><br>
+		2015&nbsp;&nbsp;&nbsp;&nbsp;Second-class scholarship for junior students of Tsinghua University<br>
+		&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
+        'Perfect' level in 'Leading Plan' of Tsinghua University<br>
+		&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
+        'Outstanding Student' honor of Jilin Province, China<br><br>
+		2014&nbsp;&nbsp;&nbsp;&nbsp;First-class prize in 'National Mathematical Olympiad' of Jilin area<br>
 	</p>
 </div>
 
 <div id="research" style="background-color:#9ACD32;height:100%;width:100%;float:left">
 	<div style="width=100%;clear:both;background-color:#EEEEEE;height:50px;text-align:left;line-height:50px;font-family:Arial Black">
-		<p><b>Research</b></p>
+		<p><b>Research Projects</b></p>
 	</div>
 	
-	<p style="color:#FFFFFF;padding-top:10px;padding-left:20px">
-		<b style="color:#000000;font-family:Arial">Space-borne navigational positioning based on receding horizon filtering (09/2016-08/2017)<br></b>
-		<a href="./OralPresentation.pdf" style="color:#EEEEEE">click here to know more</a><br><br>
-		Position and velocity outputs of space-borne GNSS receivers may not be accurate enough to be used at new situations. In this work, I propose a new algorithm to refine the output of receivers and verify the effect with simulations acted on real in-orbit satellite data. In October this year, I published a paper as the first author and made a 20 minutes' presentation on Chinacom2017, which is raised by European Alliance for Innovation(EAI). During the presentation, I successfully answered several questions about our work and won praise from the chairperson.<br>
-	</p>
+    <p style="color:#FFFFFF;padding-top:10px;padding-left:20px">
+    <b style="color:#000000;font-family:Arial">Privacy-preserving data publishing (PPDP) solutions beyond k-anonymity (07/2017-now)<br></b>
+    <br>
+    Publishing data without divulging privacy is a hotspot issue nowadays. I enter the FIB Lab of THU this year and focus on proposing new solutions to enhance the availability of data subject to the condition that privacy of users in dataset with check-in records is preserved well enough. I and my partner have built up an attacker model and used data-driven methods to analyze a dataset with more than 2 million users. And we find that people with check-in records are not so unique as people think before. Our idea mainly based on k-anonymity and l-diversity framework, but meanwhile, we aim to improve the availability of dataset. We have finished most of the work up to now and we begin to work on the paper. In the following month, I and my partner will finish this work and try to submit the paper for publication. <br>
+    </p>
 	
 	<div style="width=100%;clear:both;background-color:#EEEEEE;height:20px">
 	</div>
-	<p style="color:#FFFFFF;padding-top:10px;padding-left:20px">
-		<b style="color:#000000;font-family:Arial">Privacy-preserving data publishing (PPDP) solutions beyond k-anonymity (07/2017-now)<br></b>
-		<br>
-		Publishing data without divulging privacy is a hotspot issue nowadays. I enter the FIB Lab of THU this year and focus on proposing new solutions to enhance the availability of data subject to the condition that privacy of users in dataset with check-in records is preserved well enough. I and my partner have built up an attacker model and used data-driven methods to analyze a dataset with more than 2 million users. And we find that people with check-in records are not so unique as people think before. Our idea mainly based on k-anonymity and l-diversity framework, but meanwhile, we aim to improve the availability of dataset. We have finished most of the work up to now and we begin to work on the paper. In the following month, I and my partner will finish this work and try to submit the paper for publication. <br>
-	</p>
+    <p style="color:#FFFFFF;padding-top:10px;padding-left:20px">
+    <b style="color:#000000;font-family:Arial">Space-borne navigational positioning based on receding horizon filtering (09/2016-08/2017)<br></b>
+    <a href="./OralPresentation.pdf" style="color:#EEEEEE">click here to know more</a><br><br>
+    Position and velocity outputs of space-borne GNSS receivers may not be accurate enough to be used at new situations. In this work, I propose a new algorithm to refine the output of receivers and verify the effect with simulations acted on real in-orbit satellite data. In October this year, I published a paper as the first author and made a 20 minutes' presentation on Chinacom2017, which is raised by European Alliance for Innovation(EAI). During the presentation, I successfully answered several questions about our work and won praise from the chairperson.<br>
+    </p>
 	
 	<div style="width=100%;clear:both;background-color:#EEEEEE;height:20px">
 	</div>	
@@ -128,8 +133,9 @@
 
 </div>	
 
-<div id="footer" style="background-color:#2E8B57;height:20px;clear:both"></div>
-
+<div id="footer" style="background-color:#2E8B57;height:20px;clear:both">
+    <p style="color:#FFFFFF;text-align:center">Last revised: 9/30/2018</p>
+</div>
 </div>
 </body>
 </html>
